fix alignment 05

--- a/packages/bpk-component-breadcrumb/src/BpkBreadcrumbItem.module.scss
+++ b/packages/bpk-component-breadcrumb/src/BpkBreadcrumbItem.module.scss
@@ -1,25 +1,26 @@
 /*
- * Backpack - Skyscanner's Design System
- *
- * Copyright 2016 Skyscanner Ltd
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *   http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+* Backpack - Skyscanner's Design System
+*
+* Copyright 2016 Skyscanner Ltd
+*
+* Licensed under the Apache License, Version 2.0 (the "License");
+* you may not use this file except in compliance with the License.
+* You may obtain a copy of the License at
+*
+*   http://www.apache.org/licenses/LICENSE-2.0
+*
+* Unless required by applicable law or agreed to in writing, software
+* distributed under the License is distributed on an "AS IS" BASIS,
+* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+* See the License for the specific language governing permissions and
+* limitations under the License.
+*/
 
 @use '../../unstable__bpk-mixins/tokens';
 @use '../../unstable__bpk-mixins/typography';
 
-$icon-height: tokens.$bpk-line-height-xs / 2;
+/* stylelint-disable unit-disallowed-list */
+$icon-height: 16px;
 
 .bpk-breadcrumb-item {
   display: flex;
@@ -31,11 +32,12 @@ $icon-height: tokens.$bpk-line-height-xs / 2;
   }
 
   &__active-item {
+    margin-top: tokens.bpk-spacing-sm() / 2;
     color: tokens.$bpk-text-secondary-day;
   }
 
   &__arrow {
-    margin: 0 tokens.bpk-spacing-sm();
+    margin: tokens.bpk-spacing-sm() / 2 tokens.bpk-spacing-sm() 0;
     line-height: $icon-height;
     fill: tokens.$bpk-text-disabled-day;
   }
